--- a/Contacts/Views/Home/Index.cshtml
+++ b/Contacts/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <link href="" rel="shortcut icon">
+    <link href="https://entdesign.com/wp-content/uploads/2016/02/cropped-icon-32x32.png" rel="shortcut icon">
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +25,8 @@
     <script src="~/Content/Scripts/Libraries/moment-timezone-with-data.min.js"></script>
     <script src="~/Content/Scripts/Libraries/velocity.js"></script>
     <script src="~/Content/Scripts/Libraries/velocity.ui.min.js"></script>
+
+    <script src="~/Content/Scripts/Modules/module.validation.js"></script>
 
     <script src="~/Content/Scripts/Modules/module.global.js"></script>
     <script src="~/Content/Scripts/Modules/module.js"></script>
