updates to materials

--- a/Desktop/Views/Home/Index.cshtml
+++ b/Desktop/Views/Home/Index.cshtml
@@ -28,8 +28,11 @@
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.validation.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.global.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.js?@(ViewBag.Version)"></script>
-    <script src="https://contacts.bambino.software/Content/Scripts/Modules/module.contacts.js?@(ViewBag.Version)"></script>
 
+    <script src="https://contacts.bambino.software/Content/Scripts/Modules/module.contacts.js?@(ViewBag.Version)"></script>
+    <script src="~/Content/Scripts/Modules/module.materials.js?@(ViewBag.Version)"></script>
+    <script src="~/Content/Scripts/Modules/module.materialPriceOptions.js?@(ViewBag.Version)"></script>
+    <script src="~/Content/Scripts/Modules/module.disciplines.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.log.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.application.js?@(ViewBag.Version)"></script>
 
