--- a/Authentication/Content/Styles/flex.css
+++ b/Authentication/Content/Styles/flex.css
@@ -768,15 +768,15 @@ m-flex {
             cursor: pointer;
         }
         m-flex.xs {
-            min-width: 25px;
-            max-width: 25px;
-            height: 25px;
+            min-width: 16px;
+            max-width: 16px;
+            height: 16px;
             background-color: #EEE;
         }
             m-flex.xs i,
             m-flex.xs svg {
-                width: 1.25em;
-                height: 1.25em;
+                width: 1em;
+                height: 1em;
             }
         m-flex.sm {
             min-width: 40px;
@@ -963,7 +963,52 @@ m-card {
             margin: 0;
             color: #424242;
         }
+
+    m-card.tag {
+        border-radius: 15px;
+        width: 100px;
+        height: 30px;
+        min-height: 30px;
+        margin: 0 .25em 0 0;
+    }
+
+        m-card.tag > m-flex {
+            height: 100%;
+            min-height: 100%;
+        }
+
+        m-card.tag h1 {
+            font-size: .65em;
+        }
+
+        m-card.tag > m-flex {
+            padding: 0 .75em;
+        }
 /*--M-CARD-------------------------------------------------------------------------------*/
+
+/*--M-SELECT-------------------------------------------------------------------------------*/
+m-select {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #FFF;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    z-index: 1000;
+    border-radius: 2px;
+}
+    m-select m-option {
+        width: 100%;
+        padding: .5em 1em;
+        font-size: .75em;
+    }
+        m-select m-option:hover {
+            cursor: pointer;
+            background-color: #EEE;
+        }
+/*--M-SELECT-------------------------------------------------------------------------------*/
 
 /*--LOADING-------------------------------------------------------------------------------*/
 .loading {
