--- a/Desktop/Views/Home/Index.cshtml
+++ b/Desktop/Views/Home/Index.cshtml
@@ -24,11 +24,12 @@
     <script src="https://authentication.bambino.software/Content/Scripts/Libraries/moment-timezone-with-data.min.js"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Libraries/velocity.js"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Libraries/velocity.ui.min.js"></script>
+    <script src="https://authentication.bambino.software/Content/Scripts/Libraries/fileSaver.js"></script>
 
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.validation.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.global.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.js?@(ViewBag.Version)"></script>
-    
+
     <script src="https://admin.bambino.software/Content/Scripts/Modules/module.members.js?@(ViewBag.Version)"></script>
     <script src="https://contacts.bambino.software/Content/Scripts/Modules/module.contacts.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.project.js?@(ViewBag.Version)"></script>
