--- a/Desktop/Views/Home/Index.cshtml
+++ b/Desktop/Views/Home/Index.cshtml
@@ -29,6 +29,7 @@
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.validation.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.global.js?@(ViewBag.Version)"></script>
     <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.js?@(ViewBag.Version)"></script>
+    <script src="https://authentication.bambino.software/Content/Scripts/Modules/list.js?@(ViewBag.Version)"></script>
 
     <script src="https://admin.bambino.software/Content/Scripts/Modules/module.members.js?@(ViewBag.Version)"></script>
     <script src="https://contacts.bambino.software/Content/Scripts/Modules/module.contacts.js?@(ViewBag.Version)"></script>
