--- a/Authentication/Content/Styles/flex.css
+++ b/Authentication/Content/Styles/flex.css
@@ -643,7 +643,7 @@ m-button {
     .tableRow h2.sortdesc,
     .tableRow h2.sortasc {
         font-weight: 800;
-        color: #454545;
+        color: #454545 !important;
     }
 
     .tableRow h2.sortasc:after {
