--- a/Authentication/Content/Styles/flex.css
+++ b/Authentication/Content/Styles/flex.css
@@ -1022,7 +1022,10 @@ m-card {
     /*max-width: 400px;*/
     min-height: 40px;
     transition: box-shadow 0.35s cubic-bezier(.25,.8,.25,1);
-}   
+}
+    m-card.archive {
+        opacity: .25;
+    }
     m-card.mB {
         margin-bottom: .5em;
     }
