--- a/Authentication/Views/Shared/_Layout.cshtml
+++ b/Authentication/Views/Shared/_Layout.cshtml
@@ -16,6 +16,10 @@
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="1005375337783-aokbq8nl6c0aj1pks0v209nrdh4bl85s.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
 </head>
 <body>
 
