--- a/Authentication/Content/Styles/flex.css
+++ b/Authentication/Content/Styles/flex.css
@@ -1433,6 +1433,38 @@ select {
     }
 /*--INPUT-------------------------------------------------------------------------------*/
 
+/*--M-ICON-------------------------------------------------------------------------------*/
+m-icon {
+    width: 25px;
+    min-width: 25px;
+    max-width: 25px;
+    height: 25px;
+    min-height: 25px;
+    max-height: 25px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    background-color: #0a4876;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    color: #FFF;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: .7em;
+}
+    m-icon.lg {
+        width: 50px;
+        min-width: 50px;
+        max-width: 50px;
+        height: 50px;
+        min-height: 50px;
+        max-height: 50px;
+    }
+/*--M-ICON-------------------------------------------------------------------------------*/
+
 /*--LABEL-------------------------------------------------------------------------------*/
 label {
     font-size: .75em;
