--- a/Desktop/Views/Home/Index.cshtml
+++ b/Desktop/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <link href="https://authentication.bambino.software/" rel="shortcut icon">
+    <link rel="icon" href="https://entdesign.com/wp-content/uploads/2016/02/cropped-icon-32x32.png" sizes="32x32">
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
