--- a/Authentication/Content/Styles/flex.css
+++ b/Authentication/Content/Styles/flex.css
@@ -1083,7 +1083,7 @@ m-card {
 
     m-card.tag {
         border-radius: 15px;
-        width: 100px;
+        width: auto;
         height: 30px;
         min-height: 30px;
         margin: 0 .25em 0 0;
