--- a/Desktop/Views/Home/Index.cshtml
+++ b/Desktop/Views/Home/Index.cshtml
@@ -37,6 +37,7 @@
 
     <script src="https://admin.bambino.software/Content/Scripts/Modules/module.members.js?@(ViewBag.Version)"></script>
     <script src="https://contacts.bambino.software/Content/Scripts/Modules/module.contacts.js?@(ViewBag.Version)"></script>
+    <script src="https://authentication.bambino.software/Content/Scripts/Modules/module.projectContactCompany.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.project.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.acLayer.js?@(ViewBag.Version)"></script>
     <script src="~/Content/Scripts/Modules/module.timeTracker.js?@(ViewBag.Version)"></script>
